# capstone_demo

./: .gitignore  README.md  alembic.ini  client.py  frontend_ready_findings.json  package-lock.json  process_dependencies_with_agent.py  process_sarif_with_agent.py  pyproject.toml  requirements.txt  run.py  scan_cli.py  script.py  security_scanner.db  test_dependency_check.py
api/: client.py  main.py
database/: README  __init__.py  env.py  models.py  reset_db.py  seed.py
database/migrations/: add_codeql_analysis_fields.py  add_scan_progress_fields.py
database/versions/: 1271ed08ad8e_create_initial_tables.py  2271ed08ad8f_add_llm_analysis_fields.py
docs/: architecture.md  development-plan.md
frontend/demo/: next.config.ts  package-lock.json  package.json
frontend/demo/src/app/: page.tsx
frontend/demo/src/components/: ScanProgress.tsx
frontend/demo/src/types/: scan.ts
infrastructure/terraform/: README.md  main.tf  variables.tf
infrastructure/terraform/modules/security_scanner/: README.md  connect.sh  iam.tf  main.tf  outputs.tf  variables.tf
scanner/: __init__.py  app.py  scan.py
scanner/agents/: __init__.py  code_agent.py  dependency_agent.py
scanner/agents/dependency/: __init__.py  analyzer.py  dependency_agent.py  types.py  usage_analyzer.py
scanner/data/: count.py  dependency-check-jwt.json  juice-shop-codeql.json  juice-shop-xss.json  parse.py  vulnerability_findings.json
scanner/data/runs/js/: polynomial-redos.txt
scanner/tests/: __init__.py  test_code_agent.py  test_dependency_agent.py  test_full_scan.py
(+4 files in other folders)
