[project]
name = "capstone-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Berston",email = "samuelberston@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.9"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "langgraph (>=0.3.5,<0.4.0)",
    "langchain-anthropic (>=0.3.9,<0.4.0)",
    "langchain-openai (>=0.3.7,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
